# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: code-check-linter.yml
gendiff/: __init__.py  change_state.py  change_status.py  change_type.py  diff_properties.py  diff_tree_builder.py  file_handler.py  generate_diff.py  generator.py  parser.py
gendiff/formatters/: __init__.py  formatters.py  json.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: conftest.py  test_gendiff.py  test_gendiff_argparse.py  test_gendiff_json_formatter.py  test_gendiff_plain_formatter.py  test_gendiff_stylish_formatter.py  test_generator.py  test_parser.py
tests/fixtures/: expected_results.py
tests/fixtures/expected/: argparse_help_output.txt  argparse_no_args_output.txt  argparse_no_second_file_output.txt  json_formatter_flat_files.json  json_formatter_nested_files.json
tests/fixtures/json_formatter_output_fixtures/: flat_files_output.json
