[tool.poetry]
name = "hexlet-code"
version = "1.0.0"
description = "This package searchs difference between two files in JSON or YAML formats and displays result in multiple formats."
authors = ["Алексей Фоминых <foma1994@yandex.ru>"]
repository = "https://github.com/Ky3mu40FF/python-project-lvl2"
packages = [
    { include = "gendiff" },
]
classifiers  = [
    "Environment :: Console",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education",
]

[tool.poetry.dependencies]
python = "^3.8"
pytest-cov = "^3.0.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
